[package]
name = "packet_snooper"
version = "0.5.5"
edition = "2021"

[lib]
name = "packet_snooper"
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "main"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
serde = { version = "1.0.142", features = [ "derive" ] }
serde_json = "1.0.83"
chrono = { version = "0.4.21", features = [ "serde"] }
