[package]
name = "packet_snooper"
version = "1.0.2"
authors = ["Alberto Foti <albertofots@gmail.com>", "Samuele Giannetto"]
edition = "2021"
description = "A crossplatform multithreaded framework to capture and analyze packets."
readme = "README.md"
repository = "https://github.com/XXmorpheusX/PacketSnooper.git"
license = "MIT"
keywords = ["network", "capture", "analysis", "packet"]

[lib]
name = "packet_snooper"
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "main"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
serde = { version = "1.0.142", features = [ "derive" ] }
serde_json = "1.0.83"
chrono = { version = "0.4.21", features = [ "serde"] }
